# saai.ir

./: README.md  Screenshots.md
db-migrate-tool/: SAAIIRDBREADER.sln
db-migrate-tool/SAAIIRDBREADER/: Cities_Proviemces.mdb  Form1.Designer.cs  Form1.cs  Program.cs  SAAIIRDBREADER.csproj
db-migrate-tool/SAAIIRDBREADER/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
website/: nginx  nginx-timeout  pack
website/db/: pics.db  root.db
website/src/: CMakeLists.txt  _src.cmake  base.cpp  base.hpp  bstring.cpp  bstring.hpp  captcha.cpp  ccrypt.cpp  ccrypt.hpp  cdate.cpp  cdate.hpp  cgiroot.cpp  cgiroot.hpp  cgiroot_academy.cpp  cgiroot_home.cpp  cgiroot_login.cpp  cgiroot_root.cpp  cimage.cpp  cimage.hpp  clientinfo.cpp  clientinfo.hpp  db.cpp  db.hpp  dep-config.cmake  div.cpp  div.hpp  errlogger.cpp  errlogger.hpp  error.cpp  error.hpp  mailer.cpp  mailer.hpp  main.cpp  serverinfo.cpp  serverinfo.hpp  showpics.cpp
website/www/: root-ac.css  root-cp.css  root-hm.css  root-rt.css
